Allow for context preemption on slow commands in the passthrough cmd decoder.

BUG=787063

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I42d81450936347581eb0f0b17a40c6c20aaee927
Reviewed-on: https://chromium-review.googlesource.com/779881
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Geoff Lang <geofflang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#517943}
Former-commit-id: 39308220ba66a47086a87743064646d87cab85d9